--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "premiership",
+  "name": "infobip_premiership",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@types/jest": "24.0.17",
-    "@types/lodash": "^4.14.136",
-    "@types/node": "12.7.1",
+    "@types/material-ui": "^0.21.7",
+    "@types/node": "12.7.2",
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
-    "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0",
+    "react-scripts": "3.1.1",
     "typescript": "3.5.3"
   },
   "scripts": {
